# openwave

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  wave-xlr.md
.copr/: Makefile
.github/workflows/: release.yml
data/: de.ghostzero.OpenWave.desktop  openwave.gresource.xml  vsthost.py
packaging/: openwave.spec
packaging/aur/: .SRCINFO  PKGBUILD
src/: audio.rs  config.rs  fx.rs  lv2.rs  main.rs  midi.rs  vst.rs
src/ui/: channel_strip.rs  dbus.rs  effects.rs  midi.rs  mod.rs  outputs.rs  setup.rs  sidebar.rs  wave_xlr.rs  window.rs
