[package]
name = "openwave"
version = "0.3.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_18"] }
libpulse-binding = "2.30.1"
libpulse-glib-binding = "2.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
libloading = "0.8"
libc = "0.2"

[build-dependencies]
glib-build-tools = "0.22"
